fixed for github pages. fixed minor alignment issues

--- a/src/styles/Dns.css
+++ b/src/styles/Dns.css
@@ -52,7 +52,7 @@ nav ul a:hover {
 h1#fetch-logo {
   margin-top: 0px;
   font-style: italic;
-  margin-left: 10%;
+  margin: 0 0 0 10%;
 }
 #dns-container {
   margin-top: 5%;
